2006-10-24  Andrew Cagney  <cagney@redhat.com>

	* tests/TestDwfl.java (testGetAddresses): Mark as broken, 3416.

2006-10-20  Stan Cox  <scox@redhat.com>

	* Dwarf.java (getSourceFiles): New.
	(cni/Dwarf.cxx) (get_source_files): New.

2006-10-20  Tim Moore  <timoore@redhat.com>

	* Dwfl.java (getModules): New method.
	(getModule): Move to CNI.
	(getLineAddresses): New method.
	* cni/Dwfl.cxx (getModule, dwfl_getmodules): New native methods.
	* DwflModule.java (getName, getLines): New methods.
	* cni/DwflModule.cxx (getName, getLines): Implementations.
	* DwflLine.java (DwflLine): Make visible to package.
	* tests/TestDwfl.java (testGetModules, testGetAddresses): New
	tests for new methods. 

2006-10-11  Stan Cox  <scox@redhat.com>

	* DwarfDie.java (getFormData): New.
	* cni/DwarfDie.cxx (get_formdata): New.

2006-10-09  Adam Jocksch  <ajocksch@redhat.com>

	* DwflLine.java: Reformatted.
	(getCompilationDir): Added.
	* cni/DwflLine.cxx (dwfl_linecomp_dir): Added.

2006-10-04  Mike Cvet  <mcvet@redhat.com>

	* Dwfl.java (getSourceLine): Added try/catch around dwfl call.

2006-10-02  Stan Cox  <scox@redhat.com>

	* cni/DwarfDie.cxx (get_scopevar): Check for DW_TAG_variable.

2006-09-29  Stan Cox  <scox@redhat.com>

	* DwarfDie.java (getFrameBase): Simplify DW_AT_frame_base handling.
	* cni/DwarfDie.cxx (get_framebase): Likewise.

2006-09-19  Mark Wielaard  <mark@klomp.org>

	* tests/cni/TestLib.cxx (getFuncAddr): Extract define out of
	function and put whole definition on one line.
	* tests/TestDwfl.java (testGetLine): Use same line number for all
	architectures.

2006-09-19  Yao Qi  <qiyaoltc@cn.ibm.com>

	* tests/TestDwfl.java (testGetLine): Skip it when build on X86_64.
	Change the line number result for powerpc64.

2006-09-18  Adam Jocksch  <ajocksch@redhat.com>

	* DwarfDie.java (isInlinedFunction): New.
	(is_inline_func): New.
	* cni/DwarfDie.cxx (is_inline_func): New.
	* tests/TestDwfl.java (testGetDie): Added commented out line to test